apps/init-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-test-deployment
  labels:
    app: init-test
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: init-test
  template:
    metadata:
      labels:
        app: init-test
    spec:
      volumes:
      - name: etc-ssl-certs
        csi:
          driver: csi.cert-manager.io
          readOnly: true
          volumeAttributes:
            csi.cert-manager.io/fs-group: "2000"
            csi.cert-manager.io/issuer-kind: ClusterIssuer
            csi.cert-manager.io/issuer-name: ca-issuer
            csi.cert-manager.io/dns-names: "init-test.svc.cluster.local"
      - name: ca
        secret:
          secretName: root-secret
      - name: ca-copy
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 9443
        volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs
      - name: echo-service
        image: ealen/echo-server:latest
        args:
          - "-text=The test has been successful!"
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
        volumeMounts:
        # openssl crl2pkcs7 -nocrl -certfile /etc/ssl/certs/ca-certificates.crt | openssl pkcs7 -print_certs -noout
        - name: ca-copy
          mountPath: /etc/ssl/certs
          readOnly: false
        - name: ca
          mountPath: /usr/local/share/ca-certificates/ca.crt
          subPath: ca.crt
      # - name: ubuntu
      #   image : ubuntu:latest
      #   command: ["/bin/sh", "-c"]
      #   args:
      #     - sleep infinity
      #   resources:
      #     requests:
      #       memory: "128Mi"
      #       cpu: "100m"
      #     limits:
      #       memory: "256Mi"
      #       cpu: "200m"
      #   volumeMounts:
      #   - name: ca-copy
      #     mountPath: /etc/ssl/certs
      #     readOnly: false
      #   - name: ca
      #     mountPath: /usr/local/share/ca-certificates/ca.crt
      #     subPath: ca.crt
