apps/init-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
  - host: minikube.test
    http:
      paths:
        - path: /test-app
          pathType: Prefix
          backend:
            service:
              name: test-app-service
              port:
                number: 8000
  tls:
    hosts:
    - init-test.svc.cluster.loca
    secretName: root-secret
